launch screen design and item design added.

--- a/sdk-alert/src/main/res/values/colors.xml
+++ b/sdk-alert/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="color_white">#FFF</color>
     <color name="color_grey">#599C8E8E</color>
     <color name="color_black">#000</color>
+    <color name="color_green_ahbap">#88BE40</color>
 </resources>
