--- a/sdk-alert/src/main/res/layout/activity_donate.xml
+++ b/sdk-alert/src/main/res/layout/activity_donate.xml
@@ -8,18 +8,20 @@
     tools:context=".DonateActivity">
 
     <ImageView
+        android:id="@+id/iv_shape_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/top_shape"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:contentDescription="donate logo"
+        android:layout_marginTop="@dimen/margin_40"
+        android:contentDescription="@string/content_description_logo"
         android:src="@drawable/default_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,58 +31,57 @@
         android:id="@+id/tv_donate_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginStart="@dimen/margin_60"
+        android:layout_marginTop="@dimen/margin_36"
+        android:layout_marginEnd="@dimen/margin_60"
         android:gravity="center"
-        android:textSize="24sp"
+        android:text="@string/default_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo"
-        tools:text="Her Bağışla Fark Yarat" />
+        app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_donate_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/margin_32"
+        android:layout_marginTop="@dimen/margin_24"
+        android:layout_marginEnd="@dimen/margin_32"
         android:gravity="center"
+        android:text="@string/default_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_donate_title"
-        tools:text="Uygulamamız, 6 Şubat 2023 tarihinde yaşanan ve 11 ilde etkisini hissettiren depremden  etkilenenlerin hayatlarında bir fark yaratmanızı diliyor.
-Sadece birkaç dokunuşla afet yardımı çabalarına bağışta bulunabilir ve ihtiyacı olanlara
- yardım sağlayabilirsiniz. " />
+        app:layout_constraintTop_toBottomOf="@+id/tv_donate_title" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_donate_buttons"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        android:layout_marginStart="@dimen/margin_22"
+        android:layout_marginEnd="@dimen/margin_22"
+        app:layout_constraintBottom_toTopOf="@+id/iv_shape_heart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_donate_description" />
 
-
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_shape_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/bottom_shape"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="ContentDescription" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/iv_shape_heart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="@dimen/margin_12"
+        android:layout_marginBottom="@dimen/margin_60"
         android:src="@drawable/bottom_heart"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
