--- a/donation/src/main/res/values/colors.xml
+++ b/donation/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="fuzzy_wuzzy">#CF626E</color>
     <color name="lotion">#FAFAFA</color>
     <color name="color_bg_kizilay">#FAFAFA</color>
+
+    <color name="color_close_tint">#292D32</color>
 </resources>
