--- a/donation/src/main/res/layout-night/activity_donate.xml
+++ b/donation/src/main/res/layout-night/activity_donate.xml
@@ -1,86 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bg_donate"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mobven.donation.DonateActivity">
+    android:fillViewport="true">
 
-    <include
-        android:id="@+id/view_close"
-        layout="@layout/view_close"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bg_donate"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:context="com.mobven.donation.DonateActivity">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_40"
-        android:contentDescription="@string/content_description_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/default_logo" />
+        <include
+            android:id="@+id/view_close"
+            layout="@layout/view_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_donate_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_60"
-        android:layout_marginTop="@dimen/margin_36"
-        android:layout_marginEnd="@dimen/margin_60"
-        android:gravity="center"
-        android:textColor="@color/gunmetal"
-        android:textSize="@dimen/text_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo"
-        tools:text="@string/default_title" />
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_40"
+            android:contentDescription="@string/content_description_logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/default_logo" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_donate_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32"
-        android:layout_marginTop="@dimen/margin_24"
-        android:layout_marginEnd="@dimen/margin_32"
-        android:gravity="center"
-        android:lineHeight="22sp"
-        android:textColor="@color/gunmetal"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_donate_title"
-        tools:text="@string/default_description" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_donate_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_60"
+            android:layout_marginTop="@dimen/margin_36"
+            android:layout_marginEnd="@dimen/margin_60"
+            android:gravity="center"
+            android:textColor="@color/gunmetal"
+            android:textSize="@dimen/text_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_logo"
+            tools:text="@string/default_title" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_donate_buttons"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/margin_22"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="@dimen/margin_22"
-        android:paddingBottom="16dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_donate_description"
-        tools:itemCount="4"
-        tools:listitem="@layout/item_donate_button" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_donate_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_32"
+            android:layout_marginTop="@dimen/margin_24"
+            android:layout_marginEnd="@dimen/margin_32"
+            android:gravity="center"
+            android:lineHeight="22sp"
+            android:textColor="@color/gunmetal"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_donate_title"
+            tools:text="@string/default_description" />
+        <LinearLayout
+            android:id="@+id/ll_recycler_view_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="@dimen/margin_22"
+            android:layout_marginTop="@dimen/margin_32"
+            android:layout_marginEnd="@dimen/margin_22"
+            app:layout_constraintBottom_toTopOf="@+id/iv_shape_heart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_donate_description">
 
-    <ImageView
-        android:id="@+id/iv_shape_heart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_12"
-        android:layout_marginBottom="@dimen/margin_60"
-        android:src="@drawable/bottom_heart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="ContentDescription" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_donate_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/padding_16"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:overScrollMode="never"
+                tools:itemCount="4"
+                tools:listitem="@layout/item_donate_button" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_shape_heart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_12"
+            android:layout_marginBottom="@dimen/margin_60"
+            android:src="@drawable/bottom_heart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="ContentDescription" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
