--- a/donation/src/main/res/layout/activity_donate.xml
+++ b/donation/src/main/res/layout/activity_donate.xml
@@ -71,30 +71,22 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_donate_title"
             tools:text="@string/default_description" />
 
-        <LinearLayout
-            android:id="@+id/ll_recycler_view_wrapper"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_donate_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_22"
             android:layout_marginTop="@dimen/margin_32"
             android:layout_marginEnd="@dimen/margin_22"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/iv_shape_heart"
+            android:overScrollMode="never"
+            android:paddingBottom="@dimen/padding_16"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_donate_description">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_donate_buttons"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:overScrollMode="never"
-                android:paddingBottom="@dimen/padding_16"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:itemCount="4"
-                tools:listitem="@layout/item_donate_button" />
-        </LinearLayout>
-
+            app:layout_constraintTop_toBottomOf="@+id/tv_donate_description"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_donate_button" />
         <ImageView
             android:id="@+id/iv_shape_bottom"
             android:layout_width="wrap_content"
@@ -107,6 +99,7 @@
         <ImageView
             android:id="@+id/iv_shape_heart"
             android:layout_width="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/rv_donate_buttons"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_12"
             android:layout_marginBottom="@dimen/margin_60"
